# linear-regression-seal

./: iris_lin.py  iris_sample.data  test_data.txt
linear_test/: CMakeLists.txt  linear_model.cpp  linear_model.h
linear_train/: CMakeLists.txt  linear_train.cpp  linear_train.h
